// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches Carousel snapshot 1`] = `
<DocumentFragment>
  <div>
    <button>
      X
    </button>
  </div>
</DocumentFragment>
`;

exports[`matches Carousel snapshot 2`] = `
<DocumentFragment>
  <form>
    <input
      id="task"
      name="task"
      placeholder="add task"
      type="text"
      value=""
    />
  </form>
  <button>
     Add Task 
  </button>
</DocumentFragment>
`;

exports[`matches Carousel snapshot 3`] = `
<DocumentFragment>
  <form>
    <input
      id="task"
      name="task"
      placeholder="add task"
      type="text"
      value=""
    />
  </form>
  <button>
     Add Task 
  </button>
  <div />
</DocumentFragment>
`;
